Server code overhaul & Minor optimization